fix: regex bug on firefox

--- a/src/styles/generic/_reset.scss
+++ b/src/styles/generic/_reset.scss
@@ -64,6 +64,7 @@ button {
   padding: 0;
   outline: none;
   cursor: pointer;
+  background: none;
 }
 
 a {
